fix spacings of nearby places

--- a/scss/_list_homes.scss
+++ b/scss/_list_homes.scss
@@ -747,13 +747,18 @@ figure.lh-img-holder {
     font-size:16px;
   }
   .stars-reviews {
-    margin-top: -15px;
+    display: flex;
+    align-items: center;
+    height: 50px;
     i {
       color: $main-color;
+      padding-right: .5em;
     }
     span {
       font-size: .9rem;
+      font-weight: lighter;
       color:  #a8b6c6;
+      padding-left: 1em;
     }
   }
 }
