--- a/style.css
+++ b/style.css
@@ -1774,7 +1774,7 @@ footer {
           background: white;
           width: 1.5px;
           height: 1.5px;
-          box-shadow: 1.5px 0 0 white, 3px 0 0 white, 3px -1.5px 0 white, 3px -3px 0 white, 3px -4px 0 white, 3px -6px 0 white;
+          box-shadow: 1.5px 0 0 white, 3px 0 0 white, 3px -1.5px 0 white, 3px -3px 0 white, 3px -4px 0 white, 3px -6px 0 white;
           transform: rotate(45deg); }
     #search-homes .mobile-fields .dropdown .dropdown-menu {
       min-width: 12rem;
@@ -1833,7 +1833,7 @@ footer {
           background: white;
           width: 1.5px;
           height: 1.5px;
-          box-shadow: 1.5px 0 0 white, 3px 0 0 white, 3px -1.5px 0 white, 3px -3px 0 white, 3px -4px 0 white, 3px -6px 0 white;
+          box-shadow: 1.5px 0 0 white, 3px 0 0 white, 3px -1.5px 0 white, 3px -3px 0 white, 3px -4px 0 white, 3px -6px 0 white;
           transform: rotate(45deg); }
     #search-homes .mobile-fields .dropdown:nth-child(odd) {
       margin-left: 1%; }
@@ -3026,9 +3026,14 @@ figure.lh-img-holder {
   .lh-nearby-places p {
     font-size: 16px; }
   .lh-nearby-places .stars-reviews {
-    margin-top: -15px; }
+    display: flex;
+    align-items: center;
+    height: 50px; }
     .lh-nearby-places .stars-reviews i {
-      color: #00aced; }
+      color: #00aced;
+      padding-right: .5em; }
     .lh-nearby-places .stars-reviews span {
       font-size: .9rem;
-      color: #a8b6c6; }
+      font-weight: lighter;
+      color: #a8b6c6;
+      padding-left: 1em; }
